# KnowStack

./: .gitignore  CLAUDE.md  Makefile  PROMPTS.md  README.md  knowstack.toml  pyproject.toml
.github/actions/pr-context/: action.yml  format_comment.py
.github/workflows/: ci.yml  pr-context.yml  release.yml
docs/: adding_a_language.md  architecture.md  configuration.md  github_actions.md  llm_integration.md  query_dsl.md  quickstart.md  testing.md  troubleshooting.md
docs/examples/: sample_pr_bundle.md
knowstack/: __init__.py
knowstack/cli/: index.py  inspect.py  main.py  pr_context.py  query.py  serve.py  workspace.py
knowstack/config/: __init__.py  loader.py  schema.py
knowstack/graph/: migrations.py  queries.py  schema.py  store.py
knowstack/incremental/: __init__.py  change_detector.py  partial_pipeline.py
knowstack/ingestion/: __init__.py  embedder.py  enricher.py  normalizer.py  pipeline.py  scanner.py  writer.py
knowstack/ingestion/parsers/: __init__.py  base.py  config_parser.py  python_parser.py  typescript_parser.py
knowstack/models/: __init__.py  edges.py  enums.py  nodes.py  source_span.py
knowstack/nl/: __init__.py  entity_extractor.py  intent_classifier.py  query_builder.py
knowstack/pr_context/: __init__.py  __main__.py  budget.py  builder.py  cli.py  models.py  neighborhood.py  symbol_extractor.py
knowstack/retrieval/: __init__.py  context_packer.py  graph_retriever.py  hybrid_retriever.py  query_engine.py  ranker.py  vector_retriever.py
knowstack/serve/: __init__.py  app.py
knowstack/utils/: __init__.py  hashing.py  language_detect.py  logging.py  text.py
knowstack/workspace/: __init__.py  config.py  indexer.py
tests/: conftest.py
tests/benchmarks/: bench_incremental.py
tests/fixtures/python_sample/: api.py  auth.py  models.py  test_auth.py
tests/fixtures/typescript_sample/: auth.ts  types.ts
tests/integration/: test_incremental_correctness.py  test_incremental_pipeline.py  test_ingestion_pipeline.py
tests/unit/: test_change_detector.py  test_context_packer.py  test_format_comment.py  test_graph_retriever_depth.py  test_intent_classifier.py  test_models.py  test_normalizer.py  test_partial_pipeline.py  test_pr_context_budget.py  test_pr_context_symbol_extractor.py  test_python_parser.py  test_query_builder.py  test_ranker.py  test_serve_app.py  test_typescript_parser.py  test_workspace.py
