[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "knowstack"
version = "0.1.0"
description = "Codebase knowledge graph for LLM context retrieval and developer exploration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "kuzu>=0.9.0,<1.0",
    "tree-sitter>=0.23.0,<1.0",
    "tree-sitter-python>=0.23.0,<1.0",
    "tree-sitter-typescript>=0.23.0,<1.0",
    "chromadb>=0.6.0,<0.7",
    "sentence-transformers>=3.3.0,<4.0",
    "pydantic>=2.9.0,<3.0",
    "typer>=0.15.0,<0.16",
    "rich>=14.0.0,<15.0",
    "gitpython>=3.1.40,<4.0",
    "networkx>=3.4,<4.0",
    "httpx>=0.28.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "mypy>=1.14.0,<2.0",
    "ruff>=0.9.0,<1.0",
]
serve = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
]

[project.scripts]
knowstack = "knowstack.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["knowstack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=knowstack --cov-report=term-missing -q"

[tool.coverage.run]
source = ["knowstack"]
omit = ["tests/*"]
