[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "knowstack"
version = "0.1.0"
description = "Codebase knowledge graph for LLM context retrieval and developer exploration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "KnowStack contributors" },
]
keywords = [
    "llm", "rag", "code-search", "knowledge-graph",
    "context-engineering", "code-review", "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "kuzu>=0.9.0,<1.0",
    "tree-sitter>=0.23.0,<1.0",
    "tree-sitter-python>=0.23.0,<1.0",
    "tree-sitter-typescript>=0.23.0,<1.0",
    "chromadb>=0.6.0,<0.7",
    "sentence-transformers>=3.3.0,<4.0",
    "pydantic>=2.9.0,<3.0",
    "typer>=0.15.0,<0.16",
    "rich>=14.0.0,<15.0",
    "gitpython>=3.1.40,<4.0",
    "networkx>=3.4,<4.0",
    "httpx>=0.28.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9.0",
    "pytest-cov>=6.0,<7.0",
    "mypy>=1.14.0,<2.0",
    "ruff>=0.9.0,<1.0",
]
serve = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
]

[project.urls]
Homepage = "https://github.com/mrwalker511/KnowStack"
Repository = "https://github.com/mrwalker511/KnowStack"
Issues = "https://github.com/mrwalker511/KnowStack/issues"

[project.scripts]
knowstack = "knowstack.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["knowstack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Typer CLIs require function calls as default argument values (B008)
# and raise inside except for early exit (B904) — both are intentional patterns
"knowstack/cli/*.py" = ["B008", "B904"]
# pytest.raises(Exception) is acceptable when testing frozen model mutation
"tests/unit/test_models.py" = ["B017"]

[tool.mypy]
strict = true
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
# Typer command callbacks are decorator-typed by typer; treating those as
# untyped triggers spurious `untyped-decorator` errors across the CLI. The
# decorators themselves are fine — it's a stub-completeness issue upstream.
disable_error_code = ["untyped-decorator"]

[tool.pydantic-mypy]
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=knowstack --cov-report=term-missing -q"
# tests/fixtures/ is sample source code the parsers chew on — files named
# `test_*.py` in there are intentional, but they're synthetic and aren't
# meant to be executed as part of our own suite.
norecursedirs = ["tests/fixtures"]

[tool.coverage.run]
source = ["knowstack"]
omit = ["tests/*"]
